--- a/styles/casestudy.css
+++ b/styles/casestudy.css
@@ -196,8 +196,8 @@ a.button {
 #footer {
   border-top: 1px solid hsl(0, 0%, 50%);
   height: 150px;
+  margin-top: 25px;
   padding-top: 25px;
-  margin: auto;
 }
 
 ul.contact {
