--- a/styles/editorial.css
+++ b/styles/editorial.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
 }
 
-
 /* text styles */
 body {
   background-color: #FDFAF3;
@@ -33,9 +32,10 @@ h2 {
 nav {
     border-bottom: 1px solid hsl(0, 0%, 50%);
     height: 200px;
-    width: 100%;
     margin: auto;
     padding-top: 50px;
+    width: 100%;
+
 }
 
 .left {
@@ -47,8 +47,8 @@ nav {
 }
 
 .logo {
-  width: 120px;
   margin-left: -20px;
+  width: 120px;
 }
 
 ul.right {
@@ -61,6 +61,7 @@ li {
   padding: 30px;
 }
 
+/* Link styles */
 a {
   text-decoration: none;
 }
@@ -70,6 +71,7 @@ a:visited { color:#000000; } /* visited */
 a:hover { color:#C35E2C; } /* mouse over */
 a:active { color:#000000; } /* selected */
 
+/* Container */
 .container {
   padding-left: 110px;
   padding-right: 110px;
@@ -80,8 +82,8 @@ a:active { color:#000000; } /* selected */
 #footer {
   border-top: 1px solid hsl(0, 0%, 50%);
   height: 150px;
-  padding-top: 50px;
-  margin: auto;
+  margin-top: 25px;
+  padding-top: 25px;
 }
 
 ul.contact {
@@ -94,17 +96,13 @@ li.contact {
   font-size: 20px;
 }
 
-.icon {
-  width: 40px;
+/** Image sizes **/
+.column1 {
+width: 152%;
 }
 
 .column {
   width: 100%;
-}
-
-/** Image sizes **/
-.column1 {
-width: 152%;
 }
 
 .column_big {
@@ -112,7 +110,11 @@ width: 152%;
 }
 
 img.editorial {
-  width: 33%;
   padding-right: 20px;
   padding-bottom: 20px;
+  width: 33%;
+}
+
+.icon {
+  width: 40px;
 }
